resolbemos los problemas del css

--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
         <script src=""></script>
 
         <!--Estilos de el body-->
-        <link type="text/css" rel="stylesheet" href="estilos/pagina principal/_body_principal.css">
+        <link type="text/css" rel="stylesheet" href="estilos/pagina_principal/_body_principal.css">
         <!--Estilos de la cavesera-->
         <link type="text/css" rel="stylesheet" href="estilos/Cavesera/Estilo_cavesera.css">    
 
