--- a/rstauraciones a pedido/R-pedido.html
+++ b/rstauraciones a pedido/R-pedido.html
@@ -12,13 +12,13 @@
     <body>
         <header class="menu_cavesera">
             <div class="cavesera">
-                <a href="file:///C:/Users/Francalipcis/Documents/Data%20pagina%20web/Barreneche%20data/BarrenecheRestauraciones/Index.html" ><img class="Logo_cavesera" src="../../Imagenes de BARRENECHE/loco cavesera.png" /></a>
+                <a href="https://francalipcis.github.io/Index.html" ><img class="Logo_cavesera" src="../../Imagenes de BARRENECHE/loco cavesera.png" /></a>
                 
                 <div id="enlases">
                         <ul class="nav">
-                            <li><a href="file:///C:/Users/Francalipcis/Documents/Data%20pagina%20web/Barreneche%20data/BarrenecheRestauraciones/Index.html" class="inicio"><i class="fas fa-home"></i> INICIO </a></li>    
-                            <li><a href="file:///C:/Users/Francalipcis/Documents/Data%20pagina%20web/Barreneche%20data/BarrenecheRestauraciones/Productos/Productos.html" class="productos"><i class="fas fa-shopping-cart"></i> PRODUCTOS</a></li>
-                            <li class="u"><a href="file:///C:/Users/Francalipcis/Documents/Data%20pagina%20web/Barreneche%20data/BarrenecheRestauraciones/rstauraciones%20a%20pedido/R-pedido.html" class="contacto"><i class="fas fa-phone-square"></i>RESTAURACIONES A PEDIDO</a></li>
+                            <li><a href="https://francalipcis.github.io/Index.html" class="inicio"><i class="fas fa-home"></i> INICIO </a></li>    
+                            <li><a href="https://francalipcis.github.io/Productos/Productos.html" class="productos"><i class="fas fa-shopping-cart"></i> PRODUCTOS</a></li>
+                            <li class="u"><a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido" class="contacto"><i class="fas fa-phone-square"></i>RESTAURACIONES A PEDIDO</a></li>
                         </ul>
                 </div>
             </div>
