Agregando meta names

--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,14 @@
         <title> Barreneche restauraciones Lamparas y luzes </title>
         <link  rel="icon"   href="Imagenes de BARRENECHE/loco pestaña.png" type="image/jpg" />
 
+        <meta name="description" content="pagina de restauraciones a pedido, Nos dedicamos a restaurar objetos del pasado
+        para darles una nueva vida
+        en el futuro" />
+
+        <meta name="Keywords" content="bentas, Barreneche, lamparas, antiguo, restauraciones"/>
+
+
+
         <script src="https://kit.fontawesome.com/e0ec77387d.js" crossorigin="anonymous"></script>
         <script src=""></script>
 
