--- a/galaxi_pag/Productos.html
+++ b/galaxi_pag/Productos.html
@@ -19,8 +19,8 @@
                 
                 <div id="enlases">
                         <ul class="nav">
-                            <li><a href="https://francalipcis.github.io/Index.html" class="inicio"><i class="fas fa-home"></i> INICIO </a></li>    
-                            <li><a href="https://francalipcis.github.io/Productos/Productos.html" class="productos"><i class="fas fa-shopping-cart"></i> PRODUCTOS</a></li>
+                            <li class="enlase_1"><a href="https://francalipcis.github.io/Index.html" class="inicio"><i class="fas fa-home"></i> INICIO </a></li>    
+                            <li class="enlase_2"><a href="https://francalipcis.github.io/Productos/Productos.html" class="productos"><i class="fas fa-shopping-cart"></i> PRODUCTOS</a></li>
                             <li class="u"><a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido" class="contacto"><i class="fas fa-phone-square"></i>RESTAURACIONES A PEDIDO</a></li>
                         </ul>
                 </div>
