--- a/galaxi_pag/Productos.html
+++ b/galaxi_pag/Productos.html
@@ -20,7 +20,7 @@
                 <div id="enlases">
                         <ul class="nav">
                             <li class="enlase_1"><a href="https://francalipcis.github.io/Index.html" class="inicio"><i class="fas fa-home"></i> INICIO </a></li>    
-                            <li class="enlase_2"><a href="https://francalipcis.github.io/Productos/Productos.html" class="productos"><i class="fas fa-shopping-cart"></i> PRODUCTOS</a></li>
+                            <li class="enlase_2"><a href="https://francalipcis.github.io/galaxi_pag/Productos.html" class="productos"><i class="fas fa-shopping-cart"></i> PRODUCTOS</a></li>
                             <li class="u"><a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido" class="contacto"><i class="fas fa-phone-square"></i>RESTAURACIONES A PEDIDO</a></li>
                         </ul>
                 </div>
@@ -52,6 +52,34 @@
                 <h3>$3000</h3>
                 <a href="file:///C:/Users/Francalipcis/Documents/Data%20pagina%20web/Barreneche%20data/BarrenecheRestauraciones/rstauraciones%20a%20pedido/R-pedido.html" class="buton-add">Contactar</a>
             </div>
+        </div>
+        <div class="product_container">
+            <h3>La poderosa</h3>
+            <img class="img4" src="../../Imagenes de BARRENECHE/colgante-1.jpeg"/>
+            <h3>$3000</h3>
+            <a href="file:///C:/Users/Francalipcis/Documents/Data%20pagina%20web/Barreneche%20data/BarrenecheRestauraciones/rstauraciones%20a%20pedido/R-pedido.html" class="buton-add">Contactar</a>
+        </div>
+    </div>
+    <div class="product_container">
+        <h3>La poderosa</h3>
+        <img class="img4" src="../../Imagenes de BARRENECHE/colgante-1.jpeg"/>
+        <h3>$3000</h3>
+        <a href="file:///C:/Users/Francalipcis/Documents/Data%20pagina%20web/Barreneche%20data/BarrenecheRestauraciones/rstauraciones%20a%20pedido/R-pedido.html" class="buton-add">Contactar</a>
+    </div>
+</div>
+<div class="product_container">
+    <h3>La poderosa</h3>
+    <img class="img4" src="../../Imagenes de BARRENECHE/colgante-1.jpeg"/>
+    <h3>$3000</h3>
+    <a href="file:///C:/Users/Francalipcis/Documents/Data%20pagina%20web/Barreneche%20data/BarrenecheRestauraciones/rstauraciones%20a%20pedido/R-pedido.html" class="buton-add">Contactar</a>
+</div>
+</div>
+<div class="product_container">
+    <h3>La poderosa</h3>
+    <img class="img4" src="../../Imagenes de BARRENECHE/colgante-1.jpeg"/>
+    <h3>$3000</h3>
+    <a href="file:///C:/Users/Francalipcis/Documents/Data%20pagina%20web/Barreneche%20data/BarrenecheRestauraciones/rstauraciones%20a%20pedido/R-pedido.html" class="buton-add">Contactar</a>
+</div>
 
         </div>
     </body>
