Modificando los presios

--- a/galaxi_pag/Productos.html
+++ b/galaxi_pag/Productos.html
@@ -29,7 +29,7 @@
 
         <div class="body_content">
             <div class="product_container">
-                <a href="#">
+                <a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido">
                     <h3>La cosedora</h3>
                     <img src="../../Imagenes de BARRENECHE/124459086_2062080927261722_384533587787028661_n.jpg"/>
                     <h3>$5500</h3>
@@ -38,7 +38,7 @@
             </div>
             
             <div class="product_container">
-                <a href="#">
+                <a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido">
                     <h3>Botellona</h3>
                     <img class="img2" src="../../Imagenes de BARRENECHE/botellon.jpeg"/>
                     <h3>$2500</h3>
@@ -46,7 +46,7 @@
                 </a>
             </div>
             <div class="product_container">
-                <a href="#">
+                <a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido">
                     <h3>las Campechanas</h3>
                     <img class="img3" src="../../Imagenes de BARRENECHE/anclas.jpeg"/>
                     <h3>$6000</h3>
@@ -54,7 +54,7 @@
                 </a>
             </div>
             <div class="product_container">
-                <a href="#">  
+                <a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido">  
                     <h3>La poderosa</h3>
                     <img class="img4" src="../../Imagenes de BARRENECHE/colgante-1.jpeg"/>
                     <h3>$4000</h3>
