--- a/galaxi_pag/Productos.html
+++ b/galaxi_pag/Productos.html
@@ -33,7 +33,7 @@
                     <h3>La cosedora</h3>
                     <img src="../../Imagenes de BARRENECHE/124459086_2062080927261722_384533587787028661_n.jpg"/>
                     <h3>$5500</h3>
-                    <a href="file:///C:/Users/Francalipcis/Documents/Data%20pagina%20web/Barreneche%20data/BarrenecheRestauraciones/rstauraciones%20a%20pedido/R-pedido.html" class="buton-add">Contactar</a>
+                    <a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido" class="buton-add">Contactar</a>
                 </a> 
             </div>
             
@@ -42,7 +42,7 @@
                     <h3>Botellona</h3>
                     <img class="img2" src="../../Imagenes de BARRENECHE/botellon.jpeg"/>
                     <h3>$2500</h3>
-                    <a href="file:///C:/Users/Francalipcis/Documents/Data%20pagina%20web/Barreneche%20data/BarrenecheRestauraciones/rstauraciones%20a%20pedido/R-pedido.html" class="buton-add">Contactar</a>
+                    <a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido" class="buton-add">Contactar</a>
                 </a>
             </div>
             <div class="product_container">
@@ -50,7 +50,7 @@
                     <h3>las Campechanas</h3>
                     <img class="img3" src="../../Imagenes de BARRENECHE/anclas.jpeg"/>
                     <h3>$6000</h3>
-                    <a href="file:///C:/Users/Francalipcis/Documents/Data%20pagina%20web/Barreneche%20data/BarrenecheRestauraciones/rstauraciones%20a%20pedido/R-pedido.html" class="buton-add">Contactar</a>
+                    <a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido" class="buton-add">Contactar</a>
                 </a>
             </div>
             <div class="product_container">
@@ -58,7 +58,7 @@
                     <h3>La poderosa</h3>
                     <img class="img4" src="../../Imagenes de BARRENECHE/colgante-1.jpeg"/>
                     <h3>$4000</h3>
-                    <a href="file:///C:/Users/Francalipcis/Documents/Data%20pagina%20web/Barreneche%20data/BarrenecheRestauraciones/rstauraciones%20a%20pedido/R-pedido.html" class="buton-add">Contactar</a>
+                    <a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido" class="buton-add">Contactar</a>
                 </a>
             </div>
 
