nUEVA PAGINA DE PRODUCTOS

--- a/rstauraciones a pedido/R-pedido.html
+++ b/rstauraciones a pedido/R-pedido.html
@@ -17,7 +17,7 @@
                 <div id="enlases">
                         <ul class="nav">
                             <li><a href="https://francalipcis.github.io/Index.html" class="inicio"><i class="fas fa-home"></i> INICIO </a></li>    
-                            <li><a href="https://francalipcis.github.io/Productos/Productos.html" class="productos"><i class="fas fa-shopping-cart"></i> PRODUCTOS</a></li>
+                            <li><a href="https://francalipcis.github.io/galaxi_pag/Productos.html" class="productos"><i class="fas fa-shopping-cart"></i> PRODUCTOS</a></li>
                             <li class="u"><a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido" class="contacto"><i class="fas fa-phone-square"></i>RESTAURACIONES A PEDIDO</a></li>
                         </ul>
                 </div>
