--- a/galaxi_pag/Productos.html
+++ b/galaxi_pag/Productos.html
@@ -61,6 +61,38 @@
                     <a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido" class="buton-add">Contactar</a>
                 </a>
             </div>
+            <div class="product_container">
+                <a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido">  
+                    <h3>La poderosa</h3>
+                    <img class="img4" src="../../Imagenes de BARRENECHE/colgante-1.jpeg"/>
+                    <h3>$4000</h3>
+                    <a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido" class="buton-add">Contactar</a>
+                </a>
+            </div>
+            <div class="product_container">
+                <a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido">  
+                    <h3>La poderosa</h3>
+                    <img class="img4" src="../../Imagenes de BARRENECHE/colgante-1.jpeg"/>
+                    <h3>$4000</h3>
+                    <a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido" class="buton-add">Contactar</a>
+                </a>
+            </div>
+            <div class="product_container">
+                <a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido">  
+                    <h3>La poderosa</h3>
+                    <img class="img4" src="../../Imagenes de BARRENECHE/colgante-1.jpeg"/>
+                    <h3>$4000</h3>
+                    <a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido" class="buton-add">Contactar</a>
+                </a>
+            </div>
+            <div class="product_container">
+                <a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido">  
+                    <h3>La poderosa</h3>
+                    <img class="img4" src="../../Imagenes de BARRENECHE/colgante-1.jpeg"/>
+                    <h3>$4000</h3>
+                    <a href="https://francalipcis.github.io/rstauraciones%20a%20pedido/R-pedido" class="buton-add">Contactar</a>
+                </a>
+            </div>
 
 
 
