--- a/Index.html
+++ b/Index.html
@@ -121,7 +121,7 @@
 
 
     <footer>
-        <img src="../Imagenes de BARRENECHE/logo/logo 3.png">
+        <img src="Imagenes de BARRENECHE/baño.jpeg">
     </footer>
     
 
