--- a/Productos/Productos.html
+++ b/Productos/Productos.html
@@ -54,6 +54,25 @@
             </div>
 
         </div>
+
+
+        <footer>
+            <!--Logo francalipcis-->
+            <div class="Fran-cont">
+                <div>
+                    <img class="logo_fran" src="../Imagenes de BARRENECHE/logo/logo 4.png">
+                </div>
+                <h4 class="LF">WEB SITES</h4>
+            </div>
+    
+            <!--Logo Barreneche Restauraciones-->
+            <div>
+                <img class="logo_fother" src="../Imagenes de BARRENECHE/loco cavesera.png" />        
+            </div>
+            <a href="https://www.instagram.com/barreneche_reutilizaciones/" class="instagram" target="_blank"><i class="fab fa-instagram"></i></a>
+        </footer>
+
+
     </body>
 </html>
 
