actualizacion de pagina

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -14,7 +14,6 @@
 
     <header>
         <div class="header">
-            <h5 id="city" class="city">--</h5>
             <h5 id="country" class="country">--</h5>
         </div>
     </header>
@@ -31,7 +30,7 @@
     
     <div class="weather_general_data">
         <img src="" alt="" id="sky_img" class="sky_img">
-        <h3 id="sky_description" class="description_sky">Clear</h3>
+        <h3 id="sky_description" class="description_sky">--</h3>
         <h3 id="description_wind" class="description_wind">--</h3>
         
         <img src="" alt="" class="temp_img" id="temp_img">
@@ -48,6 +47,6 @@
 
 
 <script src="./app/main.js"></script>    
-<script src="./app/pronostico.js"></script>
+
 </body>
 </html>
