actializacion de pronostico extendido 1.0

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -49,10 +49,13 @@
 
     <!--pronostico-->
 <div class="pronostico_container">
+    <h2>Pronostic</h2>
+
+
 
     <h4 id="fecha_card1" class="fecha_c">3/3/2020</h4>
     <div class="card1">
-        <img src="./icons/10d.png" alt="" class="img_card" id="img_c_1">
+        <img src="" alt="" class="img_card" id="img_c_1">
         <h5 id="temp_c_1" class="temp_card">temp:30</h5>
         <h5 id="humidity_c_1" class=" humidity_card">humidity:10%</h5>
         <h5 id="chance_c_1" class="change_card">rain chance: 2%</h5>
@@ -60,7 +63,7 @@
 
     <h4 id="fecha_card2" class="fecha_c">3/3/2020</h4>
     <div class="card2">
-        <img src="./icons/10d.png" alt="" class="img_card" id="img_c_2">
+        <img src="" alt="" class="img_card" id="img_c_2">
         <h5 id="temp_c_2" class="temp_card">temp:30</h5>
         <h5 id="humidity_c_2" class=" humidity_card">humidity:10%</h5>
         <h5 id="chance_c_2" class="change_card">rain chance: 2%</h5>
@@ -68,13 +71,28 @@
 
     <h4 id="fecha_card3" class="fecha_c">3/3/2020</h4>
     <div class="card3">
-        <img src="./icons/10d.png" alt="" class="img_card" id="img_c_3">
+        <img src="" alt="" class="img_card" id="img_c_3">
         <h5 id="temp_c_3" class="temp_card">temp:30</h5>
         <h5 id="humidity_c_3" class=" humidity_card">humidity:10%</h5>
         <h5 id="chance_c_3" class="change_card">rain chance: 2%</h5>
     </div>
 
-    
+    <h4 id="fecha_card4" class="fecha_c">3/3/2020</h4>
+    <div class="card4">
+        <img src="" alt="" class="img_card" id="img_c_4">
+        <h5 id="temp_c_4" class="temp_card">temp:30</h5>
+        <h5 id="humidity_c_4" class=" humidity_card">humidity:10%</h5>
+        <h5 id="chance_c_4" class="change_card">rain chance: 2%</h5>
+    </div>
+
+    <h4 id="fecha_card5" class="fecha_c">3/3/2020</h4>
+    <div class="card5">
+        <img src="" alt="" class="img_card" id="img_c_5">
+        <h5 id="temp_c_5" class="temp_card">temp:30</h5>
+        <h5 id="humidity_c_5" class=" humidity_card">humidity:10%</h5>
+        <h5 id="chance_c_5" class="change_card">rain chance: 2%</h5>
+    </div>
+
 
 
 </div>
