--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -26,16 +26,17 @@
 <!--detalles de: humedad velocidad del viento y precipiraciones-->
     <div class="sky_div">
         <img src="" alt="" id="sky_img" class="sky_img">
-        <h3 id="sky_description" class="description_sky">Sunny</h3>
+        <h1 id="sky_description" class="description_sky">Sunny</h>
     </div>
-
+    
+    <h2 id="description_wind" class="description_wind">weak wind</h2>
+    
 <!--temperatura-->
     <div class="temp_div">
         <img src="" alt="" class="temp_img" id="temp_img">
         <h2 id="temp" class="temp">29</h2>
     </div>
 <!--descripcion del viento-->
-    <h3 id="description_wind" class="description_wind">weak wind</h3>
 
 <!--var mas-->
     <a href="#" class="ver_mas_weather">
@@ -71,8 +72,8 @@
     <!--pronostico-->
 <div class="pronostico_container" id="pronostico_container">
     <h2>Pronostico</h2>
-    <button class="ver_mas_pronostics1" id="ver_mas_pronostics1"><img src="./img/icons/arrow.svg" alt="" class="arrow_ver_mas"></box-icon></button>
-    <button class="ver_mas_pronostics2" id="ver_mas_pronostics2"><img src="./img/icons/arrow.svg" alt="" class="arrow_ver_mas"></box-icon></button>
+    <button class="verPronostics1" id="verPronostics1"><img src="./img/icons/arrow.svg" alt="" class="arrow_ver_mas"></box-icon></button>
+    <button class="verPronostics2" id="verPronostics2"><img src="./img/icons/arrow.svg" alt="" class="arrow_ver_mas"></box-icon></button>
 </div>
 
 
