actualisacion de pagina2.0

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -19,6 +19,7 @@
         <div class="header">
             <h5 id="country" class="country"></h5>
         </div>
+
     </header>
 
 
@@ -72,8 +73,7 @@
     <!--pronostico-->
 <div class="pronostico_container" id="pronostico_container">
     <h2>Pronostico</h2>
-    <button class="verPronostics1" id="verPronostics1"><img src="./img/icons/arrow.svg" alt="" class="arrow_ver_mas"></box-icon></button>
-    <button class="verPronostics2" id="verPronostics2"><img src="./img/icons/arrow.svg" alt="" class="arrow_ver_mas"></box-icon></button>
+    <a href="#" class="verPronostics1" id="verPronostics1">ver mas <img src="./img/icons/arrow.svg" alt=""></a>
 </div>
 
 
