actualizacion de pagina 2.1

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -29,7 +29,7 @@
     <div class="tab -hide" id="tab">
         <a href="#" class="linck1">detalles del clima</a>
         <a href="#" class="linck3">busqueda del clima por ciudad</a>
-        <a href="#" class="https://francalipcis.github.io/weather-app/pronostic_page/">pronostico extendido 16 dias</a>
+        <a href="https://francalipcis.github.io/weather-app/pronostic_page/" class="linck2">pronostico extendido 16 dias</a>
     </div>
 
 
