actualizacion de pagina 2.2 en proceso

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -27,7 +27,9 @@
     </header>
 
     <div class="tab -hide" id="tab">
-        <a href="https://francalipcis.github.io/weather-app/pronostic_page/" class="linck2">pronostico extendido 16 dias</a>
+        <a href="https://francalipcis.github.io/weather-app/" class="linck1">Pagina Principal</a>
+        <a href="https://francalipcis.github.io/weather-app/pronostic_page/" class="linck2">Pronostico extendido</a>
+        <a href="" class="linck3">busqueda por texto</a>
     </div>
 
 
