--- a/weather-app/pronostic_page/index.html
+++ b/weather-app/pronostic_page/index.html
@@ -23,6 +23,8 @@
     </header>
     <div class="tab -hide" id="tab">
         <a href="https://francalipcis.github.io/weather-app/" class="linck1">Pagina Principal</a>
+        <a href="" class="linck2">Pronostico extendido</a>
+        <a href="" class="linck3">busqueda por texto</a>
         
     </div>
 
