--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -29,7 +29,7 @@
     <div class="tab -hide" id="tab">
         <a href="https://francalipcis.github.io/weather-app/" class="linck1">Pagina Principal</a>
         <a href="https://francalipcis.github.io/weather-app/pronostic_page/" class="linck2">Pronostico extendido</a>
-        <a href="" class="linck3">busqueda por texto</a>
+        <a href="https://francalipcis.github.io/weather-app/des_abil/des.html" class="linck3">busqueda por texto</a>
     </div>
 
 
