actualizacion de pagina 2.1

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="header">
             <h3 id="country" class="country"></h3>
-              
+            <h3 id="city"></h3>
             <button class="menu" id="menu"><img src="./img/icons/menu.svg" alt=""></button>
             <button class="menu2" id="menu2"><img src="./img/icons/menu.svg" alt=""></button>
         </div>
@@ -88,9 +88,8 @@
 
 
 
-</div>
+</div>    
 
-<script src="./app/main.js"></script>    
 <script src="./app/pronostico.js"></script>
 <script src="./app/air_cualiti.js"></script>
 <script src="./app/menu.js"></script>
