actualizacion de ui

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -82,7 +82,7 @@
     <!--pronostico-->
 <div class="pronostico_container" id="pronostico_container">
     <h2>Pronostico</h2>
-    <a href="#" class="verPronostics1" id="verPronostics1">ver mas <img src="./img/icons/arrow.svg" alt=""></a>
+    <a href="https://francalipcis.github.io/weather-app/pronostic_page/" class="verPronostics1" id="verPronostics1">ver mas <img src="./img/icons/arrow.svg" alt=""></a>
 </div>
 
 
