nueva pagina avilitada

--- a/weather-app/busqueda/index.html
+++ b/weather-app/busqueda/index.html
@@ -21,9 +21,9 @@
     </div>    
 </header>
 <div class="tab -hide" id="tab">
-    <a href="https://francalipcis.github.io/weather-app/pronostic_page/" class="linck1">pronostico extendido 16 dias</a>
+    <a href="https://francalipcis.github.io/weather-app/" class="linck1">Pagina Principal</a>
     <a href="https://francalipcis.github.io/weather-app/pronostic_page/" class="linck2">pronostico extendido 16 dias</a>
-    <a href="https://francalipcis.github.io/weather-app/pronostic_page/" class="linck3">pronostico extendido 16 dias</a>
+    <a href="https://francalipcis.github.io/weather-app/busqueda/" class="linck3">Busqueda por texto</a>
 </div>
 
     <div class="body-container" id="body-container">
@@ -78,11 +78,6 @@
 
     </div>
 <script src="../app/menu.js"></script>
-<script src="./app/main.js"></script>
-<script>
-
-
-    
-</script>
+<script src="./app/main.js"></script>x
 </body>
 </html>
