--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -29,15 +29,14 @@
     <div class="tab -hide" id="tab">
         <a href="https://francalipcis.github.io/weather-app/" class="linck1">Pagina Principal</a>
         <a href="https://francalipcis.github.io/weather-app/pronostic_page/" class="linck2">Pronostico extendido</a>
-        <a href="https://francalipcis.github.io/weather-app/des_abil/des.html" class="linck3">busqueda por texto</a>
+        <a href="https://francalipcis.github.io/weather-app/busqueda" class="linck3">busqueda por texto</a>
     </div>
 
 
 <div class="body-container" id="body-container">
 <!--detalles de: humedad velocidad del viento y precipiraciones-->
     <div class="sky_div">
-        <img src="" alt="" id="sky_img" class="sky_img">
-        <h1 id="sky_description" class="description_sky"></h>
+            <h1 id="sky_description" class="description_sky"></h>
     </div>
     
     <h2 id="description_wind" class="description_wind"></h2>
