new service act

--- a/francalipciswebs/index.html
+++ b/francalipciswebs/index.html
@@ -17,7 +17,7 @@
             <!--menu de navegacion-->
             <nav class="menu-navegacion">
                 <div class="links"> 
-                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="#Inicio">Inicio</a></li>
                     <li><a href="#servicios">Servicios</a></li>
                     <li><a href="#contacto">Contacto</a></li>
                 </div>
@@ -76,10 +76,10 @@
         <!--<h2>plantillas - paginas personalizadas - estructuras a pedido</h2>-->
 
 
-        <section class="servicios">
+        <section class="servicios" id="servicios">
             <div class="serv-container">
                 <h2>Vea los servicios que tenemos para ofreser</h2>
-                <a href="#" class="Ver-btn">Visitar</a>
+                <a href="Francalipcis.github.io/francalipciswebs/price/index.html" class="Ver-btn">Visitar</a>
             </div>
         </section>
     </div>
