new service act

--- a/francalipciswebs/index.html
+++ b/francalipciswebs/index.html
@@ -79,7 +79,7 @@
         <section class="servicios" id="servicios">
             <div class="serv-container">
                 <h2>Vea los servicios que tenemos para ofreser</h2>
-                <a href="Francalipcis.github.io/francalipciswebs/price/index.html" class="Ver-btn">Visitar</a>
+                <a href="francalipciswebs/price/index.html" class="Ver-btn">Visitar</a>
             </div>
         </section>
     </div>
