new service act 7

--- a/francalipciswebs/index.html
+++ b/francalipciswebs/index.html
@@ -78,7 +78,7 @@
 
         <section class="servicios" id="servicios">
             <div class="serv-container">
-                <h2>Vea los servicios que tenemos para ofreser</h2>
+                <h2>Vea los servicios que tenemos para ofrecer</h2>
                 <a href="https://francalipcis.github.io/francalipciswebs/price/" class="Ver-btn">Visitar</a>
             </div>
         </section>
