--- a/francalipciswebs/price/index.html
+++ b/francalipciswebs/price/index.html
@@ -15,7 +15,7 @@
         <nav class="menu-navegacion">
             <div class="links">
                 <li><a href="https://francalipcis.github.io/francalipciswebs/#Inicio">Inicio</a></li>
-                <li><a href="#service">Servicios</a></li>
+                <li><a href="#servicios">Servicios</a></li>
                 <li><a href="https://francalipcis.github.io/francalipciswebs/#contacto">Contacto</a></li>
             </div>
         </nav>
