--- a/sprinWellness/index.html
+++ b/sprinWellness/index.html
@@ -85,7 +85,7 @@
         <section class="servicios" id="servicios">
             <div class="serv-container">
                 <h2>Nuestros Programas De Entrenamiento</h2>
-                <a href="https://francalipcis.github.io/Sprin%20Wellness/price/" class="Ver-btn"><img src="./src/img/icons/flex-biceps.svg" alt=""></a>
+                <a href="https://francalipcis.github.io/sprinWellness/price/" class="Ver-btn"><img src="./src/img/icons/flex-biceps.svg" alt=""></a>
             </div>
         </section>
     </div>
