--- a/sprinWellness/price/index.html
+++ b/sprinWellness/price/index.html
@@ -14,9 +14,9 @@
 
         <nav class="menu-navegacion">
             <div class="links">
-                <li><a href="https://francalipcis.github.io/Sprin%20Wellness/#inicio">Inicio</a></li>
-                <li><a href="https://francalipcis.github.io/Sprin%20Wellness/#servicios">Servicios</a></li>
-                <li><a href="https://francalipcis.github.io/Sprin%20Wellness/#contacto">Contacto</a></li>
+                <li><a href="https://francalipcis.github.io/sprinWellness/#inicio">Inicio</a></li>
+                <li><a href="https://francalipcis.github.io/sprinWellness/#servicios">Servicios</a></li>
+                <li><a href="https://francalipcis.github.io/sprinWellness/#contacto">Contacto</a></li>
             </div>
         </nav>
 
