actualizacion de pagina principal

--- a/francalipciswebs/index.html
+++ b/francalipciswebs/index.html
@@ -79,10 +79,10 @@
         <!--<h2>plantillas - paginas personalizadas - estructuras a pedido</h2>-->
 
 
-        <section class="servicios">
+        <section class="servicios" id="servicios">
             <div class="serv-container" id="servicesContainer">
                 <h2>Vea los servicios que tenemos para ofreser</h2>
-                <a href="#" class="Ver-btn">Visitar</a>
+                <a href="https://francalipcis.github.io/francalipciswebs/price/" class="Ver-btn">Visitar</a>
             </div>
         </section>
     </div>
