--- a/francalipciswebs/price/index.html
+++ b/francalipciswebs/price/index.html
@@ -14,9 +14,9 @@
 
         <nav class="menu-navegacion">
             <div class="links">
-                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="https://francalipcis.github.io/francalipciswebs/#inicio">Inicio</a></li>
                 <li><a href="#servicios">Servicios</a></li>
-                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="https://francalipcis.github.io/francalipciswebs/#contacto">Contacto</a></li>
             </div>
         </nav>
 
