actualizacion de pagina de precios

--- a/francalipciswebs/price/index.html
+++ b/francalipciswebs/price/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../src/img/Logo.ico" type="image/x-icon">
+    
     <link rel="stylesheet" href="../src/css/services.css">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+
     <title>services</title>
 </head>
 <body>
@@ -25,7 +29,7 @@
 
 
 
-    <h1 id="servicios">Servicios</h1>
+    <h1 id="servicios" class="servicios">Servicios</h1>
     <section class="services">
         <div class="services-container">
             <div class="service">
@@ -54,5 +58,6 @@
 <!--    <p>El dominio personalizado por el cliente tiene un costo a parte,
          ya que los probeedores de dominio tienen sus propias tarifas mensuales</p>
 -->
+<script src="../src/js/prices.js"></script>
 </body>
 </html>
