--- a/ExpoPage/index.html
+++ b/ExpoPage/index.html
@@ -10,27 +10,40 @@
     <link rel="stylesheet" href="static/css/index.css">
 </head>
 <body>
+    <style>
+        html {
+            scroll-behavior: smooth;
+        }
+    </style>
     <nav>
         <h1>Expo tec</h1>
-        <a href="#">start</a>
-        <a href="#">home</a>
-        <a href="#">contacts</a>
+        <a href="#">Inicio</a>
+        <a href="#">Datos</a>
+        <a href="#">creditos</a>
     </nav>
-    <div class="container _1">
+    <div class="container int">
         <div class="texts">
-            <h2>Expo tecno arte 2022 de ciencia y tecnologia</h2>
+            <h2>Proyecto expo tecno por francisco barreneche</h2>
+            <a href="#2">EXPLORAR</a>
+        </div>
+    </div>
+
+
+    <div class="container _1" id="2">
+        <div class="texts">
+            <h2>Tecnologia y automatizacion orientada al cuidado del medio ambiente</h2>
             <a href="#">APRENDE MAS</a>
         </div>
     </div>
     <div class="container _2">
         <div class="texts">
-            <h2>Exploracion espacial.. <ln/> misiones espaciales que se realizaran este año</h2>
+            <h2>Proyectos que podrian limpiar el oceano</h2>
             <a href="#">APRENDE MAS</a>
         </div>
     </div>
     <div class="container _3">
         <div class="texts">
-            <h2>Prollectos tecnologicos relacionados con la ecologia</h2>
+            <h2>El uso de los robots en la exploracion espacial</h2>
             <a href="#">APRENDE MAS</a>
         </div>
     </div>
