--- a/ExpoPage/index.html
+++ b/ExpoPage/index.html
@@ -47,7 +47,7 @@
     <div class="container _2" id="2">
         <div class="texts">
             <h2>Tecnologia y automatizacion al cuidado de la biodiversidad </h2>
-            <a href="ExpoPage/templates/MA/">APRENDE MAS</a>
+            <a href="/templates/MA/">APRENDE MAS</a>
         </div>
     </div>
     <div class="container _3">
