--- a/ExpoPage/index.html
+++ b/ExpoPage/index.html
@@ -19,7 +19,7 @@
     
     <!--Nav var-->
     <nav>
-        <h1>Expo tec</h1>
+        <h1>Expo tecno</h1>
         <a href="/">Inicio</a>
         <a href="/#2">Datos</a>
         <a href="#">creditos</a>
@@ -41,7 +41,7 @@
     <div class="container _1" id="2">
         <div class="texts">
             <h2>Salvando los Bosques con Tecnologia</h2>
-            <a href="#">APRENDE MAS</a>
+            <a href="templates/SB/">APRENDE MAS</a>
         </div>
     </div>
     <div class="container _2" id="2">
