--- a/ExpoPage/index.html
+++ b/ExpoPage/index.html
@@ -53,7 +53,7 @@
     <div class="container _3">
         <div class="texts">
             <h2>Proyectos que podrian limpiar el oceano</h2>
-            <a href="#">APRENDE MAS</a>
+            <a href="templates/LO/">APRENDE MAS</a>
         </div>
     </div>
     <div class="container _4">
