--- a/ExpoPage/index.html
+++ b/ExpoPage/index.html
@@ -20,7 +20,7 @@
     <!--Nav var-->
     <nav>
         <h1>Expo tecno</h1>
-        <a href="/">Inicio</a>
+        <a href="/ExpoPage">Inicio</a>
         <a href="/#2">Datos</a>
         <a href="#">creditos</a>
     </nav>
