--- a/ExpoPage/index.html
+++ b/ExpoPage/index.html
@@ -56,8 +56,10 @@
             <a href="templates/LO/">APRENDE MAS</a>
         </div>
     </div>
-
-
+    <footer>
+        <h5>FrancalipcisWebs</h5>
+    
+    </footer>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
