--- a/ExpoPage/index.html
+++ b/ExpoPage/index.html
@@ -22,7 +22,7 @@
         <h1>Expo tecno</h1>
         <a href="/ExpoPage">Inicio</a>
         <a href="/ExpoPage/#2">Datos</a>
-        <a href="#">creditos</a>
+        <a href="templates/CREDITS/">creditos</a>
     </nav>
     <!----------->
 
@@ -36,7 +36,7 @@
                 <h2>Proyecto expo tecno por francisco barreneche</h2>
                 <a href="#2">EXPLORAR</a>
             </div>
-            <img src="./static/img/logo.png" alt="" class="img1">
+            <img src="./static/img/logoMin.png" alt="" class="img1">
         </div>
         
 
