--- a/ExpoPage/index.html
+++ b/ExpoPage/index.html
@@ -22,7 +22,7 @@
         <h1 id="Ntitle">Expo tecno</h1>
         <a href="/ExpoPage" id="lnk">Inicio</a>
         <a href="/ExpoPage/#2"id="lnk">Datos</a>
-        <a href="templates/CREDITS/"id="lnk">creditos</a>
+        <a href="templates/CREDITS/"id="lnk">créditos</a>
     </nav>
     <!----------->
 
@@ -32,7 +32,7 @@
         
         <div class="container int">
             <div class="texts">
-                <h2 id="title">Proyecto expo tecno por francisco barreneche</h2>
+                <h2 id="title">Tecnología a favor del planeta Por Francisco Barreneche</h2>
                 <a href="#2" id="exp">EXPLORAR</a>
             </div>
             <img src="./static/img/logoMin.png" alt="" class="img1" id="logo">
@@ -41,13 +41,13 @@
 
     <div class="container _1" id="2">
         <div class="texts">
-            <h2>Salvando los Bosques con Tecnologia</h2>
+            <h2>Salvando los Bosques con Tecnología</h2>
             <a href="templates/SB/">APRENDE MAS</a>
         </div>
     </div>
     <div class="container _2" id="2">
         <div class="texts">
-            <h2>Tecnologia y automatizacion al cuidado de la biodiversidad </h2>
+            <h2>Tecnologia al cuidado de la biodiversidad </h2>
             <a href="templates/MA/">APRENDE MAS</a>
         </div>
     </div>
