--- a/ExpoPage/index.html
+++ b/ExpoPage/index.html
@@ -60,6 +60,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script src="./js/app.js"></script>
-    <script src="../../js/navAnimations.js"></script>
+    <script src="/js/navAnimations.js"></script>
 </body>
 </html>
